adding some components

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "simplex-noise": "^4.0.3",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
