--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.36.1",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^8.19.1",
-    "motion": "^12.23.26",
+    "motion": "^12.24.10",
     "next": "^16.0.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
